--- a/package.json
+++ b/package.json
@@ -2,12 +2,35 @@
   "name": "@variate/vue",
   "version": "1.0.0",
   "description": "Variate Vue plugin",
-  "main": "src/index.js",
+  "main": "dist/variate-vue.common.js",
+  "module": "dist/variate-vue.esm.js",
+  "unpkg": "dist/variate-vue.js",
+  "jsdelivr": "dist/variate-vue.js",
   "scripts": {
+    "dev": "npm run clean && rollup -wm -c rollup.config.js",
+    "build": "npm run clean && rollup  -c rollup.config.js --treeshake.pureExternalModules",
+    "clean": "rimraf dist/",
+    "prepublish": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@variate/engine": "file:~/Sites/Variate-Engine"
+    "@variate/engine": "file:~/Sites/Variate-Engine",
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.7.4",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-replace": "^2.1.1",
+    "rollup-plugin-uglify": "^6.0.2"
   },
   "repository": {
     "type": "git",
