--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "jsdelivr": "dist/variate-vue.js",
   "scripts": {
     "dev": "npm run clean && rollup -wm -c rollup.config.js",
-    "build": "npm run clean && rollup  -c rollup.config.js --treeshake.pureExternalModules",
+    "build": "npm run clean && rollup -c rollup.config.js --exports=named",
     "clean": "rimraf dist/",
     "prepublish": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +28,9 @@
     "rollup": "^1.7.4",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.1.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
