--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "npm run clean && rollup -wm -c rollup.config.js",
     "build": "npm run clean && rollup -c rollup.config.js --exports=named",
     "clean": "rimraf dist/",
+    "release": "standard-version",
     "prepublishOnly": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +25,10 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "cz-conventional-changelog": "^3.0.2",
+    "husky": "^3.0.9",
     "rimraf": "^2.6.3",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
@@ -32,7 +37,8 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-uglify": "^6.0.2",
+    "standard-version": "^7.0.0"
   },
   "repository": {
     "type": "git",
@@ -47,5 +53,10 @@
   "bugs": {
     "url": "https://github.com/variateapp/variate-vue/issues"
   },
-  "homepage": "https://github.com/variateapp/variate-vue#README.md"
+  "homepage": "https://github.com/variateapp/variate-vue#README.md",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
