--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf dist/",
     "release": "standard-version",
     "prepublishOnly": "npm run clean && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "files": [
     "dist"
@@ -29,8 +29,11 @@
     "@babel/preset-env": "^7.7.6",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@vue/test-utils": "^1.0.0-beta.30",
+    "babel-jest": "^24.9.0",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
@@ -40,7 +43,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.3",
-    "standard-version": "^7.0.1"
+    "standard-version": "^7.0.1",
+    "vue-jest": "^3.0.5"
   },
   "repository": {
     "type": "git",
