--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -2,8 +2,9 @@ name: Node.js Package
 
 on:
   push:
-    tags:
-      - '*'
+    master:
+#    tags:
+#      - '*'
 
 jobs:
   publish-npm:
@@ -18,6 +19,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run test
-      - run: npm publish --access public
+      - run: ls
+#      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
