--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "unpkg": "dist/variate-vue.js",
   "jsdelivr": "dist/variate-vue.js",
   "scripts": {
+    "lint": "eslint --ext .js src",
     "dev": "npm run clean && rollup -wm -c rollup.config.js",
     "clean": "rimraf dist/",
     "build": "rollup -c rollup.config.js --exports=named",
@@ -17,28 +18,30 @@
   },
   "dependencies": {
     "@variate/engine": "^3.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "@commitlint/cli": "^8.3.3",
     "@commitlint/config-conventional": "^8.3.3",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-jest": "^24.9.0",
     "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.0.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.27.9",
+    "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.3",
+    "rollup-plugin-uglify": "^6.0.4",
     "standard-version": "^7.0.1",
     "vue-jest": "^3.0.5"
   },
