--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
+    "lint-staged": "^10.2.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.0",
     "rollup-plugin-babel": "^4.4.0",
@@ -61,5 +62,13 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
